<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.htw_berlin.gma.feedyourkitty.EnterName"
    android:background="@drawable/bg_neutral">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_highscores"
        android:id="@+id/button_load_scores"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="LoadScores"
        android:nestedScrollingEnabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_you_rock"
        android:id="@+id/end_text"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:textSize="44sp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_name_text"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#ffffffff"
            android:textSize="32sp"
            android:hint="@string/string_name"
            android:background="#34ff8f44"
            android:selectAllOnFocus="true"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</RelativeLayout>
